Bug 78718 - Calc freezes when typing " in formula
Summary: Calc freezes when typing " in formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium blocker
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-15 02:22 UTC by Kohei Yoshida
Modified: 2014-05-15 15:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-05-15 02:22:45 UTC
In any cell, type

="

and Calc freezes.
Comment 1 Kohei Yoshida 2014-05-15 02:25:47 UTC
Here is my backtrace

(gdb) bt
#0  0x00007f7deab7040c in rtl_uString_newConcat () from /home/kohei/libo/my-master/instdir/program/../ure-link/lib/libuno_sal.so.3
#1  0x00007f7dcef19f2a in operator+= (str=..., this=0x7fff6f8a7750) at /home/kohei/libo/my-master/include/rtl/ustring.hxx:355
#2  ScInputHandler::ShowArgumentsTip (this=this@entry=0x2fe1c30, rParagraph=..., rSelText=..., rSel=..., bTryFirstSel=bTryFirstSel@entry=false) at /home/kohei/libo/my-master/sc/source/ui/app/inputhdl.cxx:805
#3  0x00007f7dcef1cee2 in ScInputHandler::UseFormulaData (this=this@entry=0x2fe1c30) at /home/kohei/libo/my-master/sc/source/ui/app/inputhdl.cxx:1094
#4  0x00007f7dcef222fc in ScInputHandler::KeyInput (this=0x2fe1c30, rKEvt=..., bStartEdit=false) at /home/kohei/libo/my-master/sc/source/ui/app/inputhdl.cxx:3146
#5  0x00007f7dcf28af79 in ScTabViewShell::TabKeyInput (this=0x2fbd5d0, rKEvt=...) at /home/kohei/libo/my-master/sc/source/ui/view/tabvwsh4.cxx:1261
#6  0x00007f7dcf207abf in ScGridWindow::KeyInput (this=0x2fc1fd0, rKEvt=...) at /home/kohei/libo/my-master/sc/source/ui/view/gridwin.cxx:3362
Comment 2 Eike Rathke (retired, only occasionally showing up) 2014-05-15 09:28:40 UTC
Let me take this, I think I know what I broke..
Comment 3 Winfried Donkers 2014-05-15 09:32:23 UTC
I submitted a patch (https://gerrit.libreoffice.org/#/c/9359/) as it seemes an omission in my patch ...
Comment 4 Commit Notification 2014-05-15 10:35:47 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4f32eec653596483088c6e5aa37de031278d74c

resolved fdo#78718 break the indefinite loop when entering ="



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Eike Rathke (retired, only occasionally showing up) 2014-05-15 10:41:39 UTC
@Winfried:
Wasn't your fault, it was the result of my refactoring that distilled the copypasted code of two functions into ScInputHandler::ShowArgumentsTip()
Comment 6 Winfried Donkers 2014-05-15 10:58:39 UTC
(In reply to comment #5)
> @Winfried:
> Wasn't your fault, it was the result of my refactoring that distilled the
> copypasted code of two functions into ScInputHandler::ShowArgumentsTip()

No problem, I'm glad I came up with the same solution.
Comment 7 Kohei Yoshida 2014-05-15 15:43:09 UTC
Thanks a lot for the quick fix, you two.