fdo#78718 fix freeze of calc when typing " in formula

Change-Id: I925505b240d3e567340dcbb785bcb821ed08dda0